Fri May 30 03:12:18 2008  Akinori MUSHA  <knu@iDaemons.org>

	* ext/openssl/ossl_bn.c (ossl_bn_s_rand, ossl_bn_s_pseudo_rand):
	  Int should be enough here.

Fri May 30 02:35:00 2008  Akinori MUSHA  <knu@iDaemons.org>

	* ext/openssl/ossl_bn.c (ossl_bn_s_rand, ossl_bn_s_pseudo_rand),
	  ext/openssl/ossl_pkey_dh.c (ossl_dh_s_generate)
	  (ossl_dh_initialize),
	  ext/openssl/ossl_pkey_dsa.c (ossl_dsa_s_generate),
	  ext/openssl/ossl_rand.c (ossl_rand_bytes)
	  (ossl_rand_pseudo_bytes, ossl_rand_egd_bytes),
	  ext/openssl/ossl_x509store.c (ossl_x509stctx_set_error): Do not
	  use FIX2INT() without checking the value type.  Use NUM2INT()
	  instead; found by akr in [ruby-dev:34890].

Thu May 29 20:07:45 2008  Akinori MUSHA  <knu@iDaemons.org>

	* configure.in, win32/Makefile.sub, mkconfig.rb, instruby.rb,
	  ruby.c, lib/mkmf.rb, README.EXT, README.EXT.ja: Backport the
	  vendor_ruby directory support.

Wed May 28 17:54:29 2008  Akinori MUSHA  <knu@iDaemons.org>

	* string.c (rb_str_start_with): Remove an unused variable.
	  (rb_str_upto_m): Fix a prototype.

Wed May 28 17:48:28 2008  Akinori MUSHA  <knu@iDaemons.org>

	* range.c (range_step): Fix brokenness when a non-integer numeric
	  value is specified as step. [rubyspec]
	  (range_step): Make use of String#step internally if a string (or
	  string-alike) range is given.

	* string.c (rb_str_upto_m, Init_String): Add an optional second
	  argument to specify if the last value should be included.

Wed May 28 16:53:39 2008  Akinori MUSHA  <knu@iDaemons.org>

	* array.c (rb_ary_slice_bang): Call rb_ary_modify_check() at the
	  beginning. [rubyspec]

Wed May 28 16:12:44 2008  Akinori MUSHA  <knu@iDaemons.org>

	* lib/webrick/httpservlet/cgihandler.rb (WEBrick::HTTPServlet::CGIHandler#do_GET):
	  Set the HTTP status code to 302 if a Location header field is
	  present and the status code is not valid as a client
	  redirection.  cf. RFC 3875 6.2.3, 6.2.4.

Wed May 28 15:18:16 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
